--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -6,15 +6,20 @@
     <% end %>
 <% end %>
 
-<%= form_with model: @listing do |form|  %>
-    <%= form_with(model: @listing, local: true) do |form| %>
+<%= form_with(model: @listing, local: true) do |form| %>
     <div class="title-field">
         <%= form.label :title %>
         <%= form.text_field :title %>
     </div>
     <div>
         <%= form.label :breed_id %>
-        <%= form.number_field :breed_id %>
+        <%= form.select(:breed_id, @breeds.map{ |b| [b.name, b.id] }) %>
+    </div>
+    <div>
+        <% @sexes.each do |option| %>
+            <%= form.radio_button :sex, option %>
+            <%= form.label option.to_sym %>
+        <% end %>
     </div>
     <div>
         <%= form.label :description %>
@@ -48,7 +53,3 @@
         <%= form.submit %>
     </div>
 <% end %>
-
-<% end %>
-
-
