Add ability to attach images on listing submission

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,1 +1,8 @@
-Index
+<% @listings.each do |listing| %>
+    <li>
+        <%= link_to listing.title, listing_path(listing.id)%>
+        <%= image_tag listing.picture if listing.picture.attached? %>
+    </li>
+<% end %>
+
+<%= image_tag "hero.png", alt: "cool snake" %>
