--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -50,6 +50,14 @@
         <%= form.text_field :diet %>
     </div>
     <div>
+        <%= form.label :picture %>
+        <%= form.file_field :picture, accept: 'image/png,image/gif,image/jpeg,image/jpg' %>
+        <% if @listing.errors.any? %>
+            FILL THIS OUT AGAIN
+        <% end %>
+    </div>
+
+    <div>
         <%= form.submit %>
     </div>
 <% end %>
